# Padalix

./: .gitignore  PROJECT_DESCRIPTION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.github/workflows/: ci.yml
apps/admin/: .env.example  README.md  next.config.ts  package.json  vercel.json
apps/admin/scripts/: sync-marketing-media.ts
apps/marketing/: .env.example  README.md  next.config.ts  package.json
apps/web/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json
contracts/milestone-escrow/: Cargo.toml  README.md
contracts/milestone-escrow/deployments/: testnet.json
contracts/milestone-escrow/src/: lib.rs  test.rs
contracts/milestone-escrow/test_snapshots/test/: funds_and_releases_milestones_in_order.1.json  refunds_only_remaining_funds_after_deadline.1.json  rejects_invalid_configuration_and_early_refund.1.json
docs/: ARCHITECTURE.md  DELIVERY_PLAN.md  DEPLOYMENT.md  EASYPANEL_WORKER_AND_SES.md  IN_HOUSE_KYC_AML.md  KYC_AUTOMATION_AND_ACCOUNT_TIERS.md  KYC_EVIDENCE_STORAGE.md  MAINNET_PILOT.md  MONEYGRAM_SEP24_DEMO.md  NOTIFICATIONS_AND_COMPLIANCE.md  OPERATIONS_RUNBOOK.md  PRODUCTION_MVP.md  PUBLIC_MEDIA_STORAGE.md  RELEASE_CHECKLIST.md  SMART_CONTRACT_AUDIT.md
scripts/: check-migrations.sh  check-secrets.sh  dev-platform-local.sh  dev-web-local.sh  dev-worker-local.sh  migrate-local.sh  seed-demo.sh  seed-demo.sql  validate-deployment.sh
services/platform/: .dockerignore  .env.example  Dockerfile  Dockerfile.vercel  Dockerfile.worker  README.md  go.mod  go.sum
(+266 files in other folders)
